<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="main_menu_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_btn_text_spot">Spotify Streamer</string>
    <string name="main_menu_btn_text_scores">SCORES APP</string>
    <string name="main_menu_btn_text_library">LIBRARY APP</string>
    <string name="main_menu_btn_text_build_bigger">BUILD IT BIGGER</string>
    <string name="main_menu_btn_text_xyz">XYZ READER</string>
    <string name="main_toast_string">This button will launch </string>
    <!--Spotify Streamer-->
    <!--Super Duo (2 buttons: Football Scores App and Library App)-->
    <!--Build It Bigger-->
    <!--XYZ Reader-->
    <!--Capstone-->
</resources>
