<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/dim_foreground_disabled_material_dark"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/main_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/textView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true">

        <Button
            style="@style/main_buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_btn_text_spot"
            android:id="@+id/button_spot"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/main_buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_btn_text_scores"
            android:id="@+id/button_scores"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/main_buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_btn_text_library"
            android:id="@+id/button_library"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/main_buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_btn_text_build_bigger"
            android:id="@+id/button_build_bigger"
            android:layout_gravity="center_horizontal" />

        <Button
            style="@style/main_buttons_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_btn_text_xyz"
            android:id="@+id/button_xyz"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>
